Um, just haven't checked in in a while

--- a/dist.ini
+++ b/dist.ini
@@ -1,8 +1,12 @@
-name = WebGUI-Install
-author = Paul Driver <frodwith@cpan.org>
-license = Perl_5
-copyright_holder = Paul Driver <frodwit@cpan.org>
-copyright_year = 2010
-version = 0.01
+name             = WebGUI-Install
+author           = Paul Driver <frodwith@cpan.org>
+license          = Perl_5
+copyright_holder = Paul Driver <frodwith@cpan.org>
+copyright_year   = 2010
+version          = 0.01
 
 [@Basic]
+[PodWeaver]
+[AutoPrereqs]
+[ExecDir]
+[PkgVersion]
